adjust best practices

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -41,7 +41,7 @@ html(lang='pt-br')
     link(rel='stylesheet', href='css/responsive.css')
 
     // FAVICON - **WAIT** DESIGN
-    link(rel='shortcut icon', type='image/x-icon', href='img/images/Favicon_app.png')
+    link(rel='shortcut icon', type='image/x-icon', href='images/Favicon_app.png')
 
     link(rel='canonical', href='https://findcep.labunix.dev/index.html')
     // **WAIT*** TRADUCAO
@@ -465,8 +465,9 @@ html(lang='pt-br')
     script(src='_saas/vendors/imagesloaded/imagesloaded.pkgd.min.js')
     script(src='_saas/vendors/isotope/isotope-min.js')
     script(src='_saas/vendors/magnify-pop/jquery.magnific-popup.min.js')
-    script(src='_saas/js/plugins.js')
     script(src='_saas/vendors/scroll/jquery.mCustomScrollbar.concat.min.js')
+    script(src='_saas/vendors/slick/slick.min.js')
+    script(src='_saas/js/plugins.js')
     script(src='_saas/js/main.js')
     // SASSY JS TEMPLATE
     script(src='js/jquery.min.js')
