change menu texto

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -36,7 +36,7 @@ html(lang='pt-br')
     link(rel='stylesheet', href='_saas/css/responsive.css')
 
     //- SASSY TEMPLATE CSS
-    //link(rel='stylesheet', href='css/bootstrap.min.css')
+    link(rel='stylesheet', href='css/bootstrap.min.css')
     link(rel='stylesheet', href='css/font-awesome.min.css')
     link(rel='stylesheet', href='elegant-icon/style.css')
     link(rel='stylesheet', href='simpleline-icon/css/simple-line-icons.css')
@@ -79,17 +79,17 @@ html(lang='pt-br')
                 li.menu-item.current_page_item.active
                   a(title='Home', href='#home') Por que FindCEP?
                 li.menu-item
+                  a(title='Pricing', href='#pricing') Planos e Preços
+                li.menu-item
                   a(title='Services', href='#services') Services
                 li.menu-item
                   a(title='Dashboard', href='#dashboard') Dashboard
                 li.menu-item
                   a(title='Features', href='#features') Vantagens
                 li.menu-item
-                  a(title='Pricing', href='#pricing') Preços
+                  a(title='Developer', href='//www.findcep.com/docs/index.html') Documentaçao
                 li.menu-item
                   a(title='Contact', href='#contact') Contato
-                li.menu-item
-                  a(title='Developer', href='//www.findcep.com/docs/index.html') Desenvolvimento
     section#newsletter.saas_newsletter_area
               .container
                 .new_sectitle.br_none.pb_0
