--- a/_saas/scss/_hosting.scss
+++ b/_saas/scss/_hosting.scss
@@ -94,6 +94,13 @@
     position: relative;
 }
 .hosting_content{
+    h1{
+        font-size: 50px;
+        line-height: 64px;
+        color: #fff;
+        font-weight: 600;
+        margin-bottom: 5px;
+    }
     h2{
         font-size: 50px;
         line-height: 70px;
@@ -177,7 +184,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url("../img/hosting/map.png") no-repeat scroll center 0 / cover; 
+    background: url("../img/hosting/map.png") no-repeat scroll center 0 / cover;
     z-index: -1;
 }
 .domain_box_info{
@@ -418,14 +425,14 @@ a .h_head{
         margin-bottom: 42px;
     }
     .hosting_btn{
-        
+
     }
 }
 /*========== h_action_area css ========*/
 
 /*========== h_blog_area css ========*/
 .h_blog_area{
-    
+
 }
 .h_blog_item{
     background-color: rgb(255, 255, 255);
@@ -501,7 +508,7 @@ a .h_head{
                 font-size: 14px;
                 line-height: 16px;
                 i{
-                    color: #f8636b; 
+                    color: #f8636b;
                     padding-right: 3px;
                 }
             }
@@ -538,7 +545,7 @@ a .h_head{
                 }
                 &:hover{
                     color: #5f54fd;
-                }   
+                }
             }
             .post-info-comments{
                 i{
@@ -762,7 +769,7 @@ a .h_head{
                     color: #f8636b;
                 }
             }
-        } 
+        }
     }
 }
 
@@ -787,7 +794,7 @@ a .h_head{
                     color: #4f79f6;
                 }
             }
-        } 
+        }
     }
 }
 
@@ -840,7 +847,7 @@ a .h_head{
     .f_widget{
         &.company_widget{
             p{
-               color: #bab5df; 
+               color: #bab5df;
             }
             .f_social_icon{
                 a{
@@ -864,7 +871,7 @@ a .h_head{
                     color: #fff;
                 }
             }
-        } 
+        }
     }
 }
 .pos_footer_bottom{
@@ -1094,7 +1101,7 @@ a .h_head{
 }
 
 .h_pricing_area{
-    
+
 }
 .h_price_inner{
     max-width: 970px;
@@ -1139,14 +1146,14 @@ a .h_head{
 }
 .h_price_body{
     .price_head{
-        display: table;
+        display: inline-table;
         width: 100%;
         background: #faf7f8;
         height: 50px;
         padding-right: 50px;
         border-top: 1px solid #f7f0f0;
         .p_head{
-            width: calc(100% / 6);
+            width: calc(100% / 7);
             text-align: center;
             vertical-align: middle;
             display: table-cell;
@@ -1160,7 +1167,7 @@ a .h_head{
         }
     }
     .h_p_list{
-        display: table;
+        display: inline-flex;
         width: 100%;
         padding-right: 50px;
         padding-top: 16px;
@@ -1255,7 +1262,7 @@ a .h_head{
             }
             &:before{
                 width: 80px;
-                height: 80px; 
+                height: 80px;
             }
             &:after{
                 width: 60px;
@@ -1342,7 +1349,7 @@ a .h_head{
                 box-shadow: 0px 20px 30px 0px rgba(91, 171, 21, 0.24);
             }
             &.blue{
-                background: #3e89f9;  
+                background: #3e89f9;
                 box-shadow: 0px 20px 30px 0px rgba(21, 81, 171, 0.24);
             }
             &.yellow{
@@ -1443,7 +1450,7 @@ a .h_head{
             &.owl-prev,&.owl-next{
                 position: absolute;
                 top: 50%;
-                transform: translateY(-50%); 
+                transform: translateY(-50%);
                 font-size: 45px;
                 color: #c1c1d4;
                 transition: all 0.2s linear;
@@ -1786,7 +1793,7 @@ a .h_head{
                 display: none;
             }
         }
-    } 
+    }
 }
 /*============= pos_banner_area css ===========*/
 
@@ -1803,7 +1810,7 @@ a .h_head{
         top: 0;
         background-position: right, right !important;
         background-repeat: no-repeat !important;
-        
+
     }
     .pattern{
         position: absolute;
@@ -1929,13 +1936,13 @@ a .h_head{
                 opacity: 0;
                 transition: all 0.7s linear;
                 &.green{
-                   background: #c8ede9; 
+                   background: #c8ede9;
                 }
                 &.pink{
-                   background: #f93e5e; 
+                   background: #f93e5e;
                 }
                 &.yellow{
-                   background: #f9edcf; 
+                   background: #f9edcf;
                 }
             }
             .pattern_shap{
@@ -2011,7 +2018,7 @@ a .h_head{
             color: #7b7b93;
             margin-bottom: 0;
         }
-    } 
+    }
 }
 
 
@@ -2333,7 +2340,7 @@ a .h_head{
         .btn_submit{
             border-radius: 45px;
         }
-    } 
+    }
 }
 .support_home_img{
     margin-left: -70px;
